--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,11 @@
-
+search/index.json 1.jpg=ture
+search/index.json 4.jpg=ture
+search/index.json 5.jpg=ture
+search/index.json 6.jpg=ture
+search/index.json 7.jpg=ture
+search/index.json 8.jpg=ture
+search/index.json 9.jpg=ture
+search/index.json 10.jpg=ture
+search/index.json 11.jpg=ture
+search/index.json 2.png=ture
+search/index.json 3.png=ture
