--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,5 @@ search/index.json 10.jpg=ture
 search/index.json 11.jpg=ture
 search/index.json 2.png=ture
 search/index.json 3.png=ture
+search/index.json 1.mp3=ture
+search/index.json 2.mp3=ture
