--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,5 @@ search/index.json 2.png=ture
 search/index.json 3.png=ture
 search/index.json 1.mp3=ture
 search/index.json 2.mp3=ture
+search/index.json 3.MFLAC=ture
+search/index.json desktop.ini=ture
