--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@ search/index.json 1.mp3=ture
 search/index.json 2.mp3=ture
 search/index.json 3.MFLAC=ture
 search/index.json desktop.ini=ture
+search/index.json HappyBirthday.png=ture
